--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   intl:
   timeago:
   cached_network_image: ^3.2.0
+  share_plus: ^4.0.4
+  webview_flutter:
 
 
 dev_dependencies:
