--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
 
 
   cupertino_icons: ^1.0.2
+  flutter_launcher_icons: ^0.9.2
   http: ^0.13.4
   flutter_bloc: ^7.3.3
   equatable: ^2.0.3
@@ -24,12 +25,20 @@ dependencies:
   share_plus: ^4.0.4
   webview_flutter:
   form_field_validator:
+  fluttertoast:
+  hive:
+  hive_flutter:
 
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/news-logo.png"
 
 
   flutter_lints: ^1.0.0
@@ -38,4 +47,7 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
+
+  assets:
+     - assets/images/
 
