--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-
+  flutter_localizations:
+    sdk: flutter
   cupertino_icons: ^1.0.2
   flutter_launcher_icons: ^0.9.2
   http: ^0.13.4
@@ -48,6 +48,7 @@ flutter_icons:
 flutter:
 
   uses-material-design: true
+  generate: true
 
   assets:
      - assets/images/
