--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,11 @@ dependencies:
   lottie: ^1.3.0
   rxdart:
   curved_navigation_bar:
+  font_awesome_flutter:
+  conveter:
+  geolocator:
+  geocoding:
+
 
 
 
